# Skoda_Hackathon

./: README.md  docker-compose.test.yml  docker-compose.yml  env.local.example  fake_learning_history.csv  fake_skoda_dataset.csv  fix_backend_imports.py  fix_components_imports.py  fix_imports.py  fix_remaining_imports.py  fix_ui_imports.py  presentation.html  smoke_test_results.json
backend/: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  LICENSE  docker-compose.test.yml  docker-compose.yml  pyproject.toml  run_tests.sh  test_ai_smoke.py  test_llm_direct.py  test_results_ai_smoke.json
backend/.well-known/: ai-plugin-air-quality.json  ai-plugin-transport.json  ai-plugin.json  openapi-air-quality.json  openapi-transport.json  openapi.json
backend/data/fuzzystopwords/: stops.txt
backend/data/normalized/: comprehensive_test_dataset_20251119T220631Z.csv
backend/data/processed/: comprehensive_test_dataset_20251119T220610Z_dq_report.json  comprehensive_test_dataset_20251119T220610Z_summary.json  comprehensive_test_dataset_20251119T220631Z_dq_report.json  comprehensive_test_dataset_20251119T220631Z_summary.json  comprehensive_test_dataset_20251119T220747Z_dq_report.json  comprehensive_test_dataset_20251119T220747Z_summary.json
backend/data/raw/: comprehensive_test_dataset_20251119T220747Z.csv
backend/migrations/: env.py  script.py.mako  ted.py
backend/migrations/versions/: add_skill_coach_models.py  add_skoda_fields.py
backend/scripts/: check_metadata.py  check_schema_diff.sh  docker-entrypoint.sh  generate_sample_datasets.py  import_audit.py  prestart.sh  rollback_last_migration.sh  run_everything.sh  run_everything_docker.sh  run_tests_docker.sh  run_tests_local.sh  smoke_test_backend.py  start-docker.sh  test-docker-production.sh  verify_cpu_only.py
backend/src/: main.py
backend/src/config/: settings.py
backend/src/middleware/: cors_middleware.py  dataset_validators.py  demo_auth_middleware.py  employee_validators.py  force_accept_header.py  logging_middleware.py  rate_limit_middleware.py  redis_session_middleware.py  sentry_middleware.py  session_middleware.py
backend/src/models/: __init__.py  skill_models.py  skoda_models.py
backend/src/routes/: advanced_skill_routes.py  ai_route.py  analytics_route.py  career_coach_route.py  config_route.py  dashboard_route.py  ingestion_route.py  leadership_narrative_route.py  predictive_analytics_route.py  recommendations_route.py  router.py  skills_route.py  training_plan_route.py
backend/src/services/: advanced_dq_service.py  ai_orchestrator.py  audit_service.py  azure_llm_client.py  career_coach_service.py  data_quality_service.py  data_repair_service.py  dataset_ingestion_service.py  employee_ingestion_service.py  historical_data_loader.py  ingestion_service.py  leadership_narrative_service.py  llm_client.py  mentor_recommendation_service.py  multilingual_normalization_service.py  predictive_analytics_service.py  role_fit_service.py  scenario_simulation_service.py  skill_ai_service.py  skill_analytics_service.py  skill_forecasting_service.py  skill_ontology_service.py  skill_recommendations_service.py  skill_taxonomy_service.py  skoda_data_adapter.py  skoda_mapping_tables.py  team_similarity_service.py  tone_service.py  training_plan_service.py
backend/src/types/: __init__.py  ai_schemas.py  (+14 more)
backend/tests/: DOCKER_TESTING.md  FINAL_STATUS.md  README.md  RUN_TESTS_NOW.md  TEST_EXECUTION_STATUS.md  TEST_REPORT.md  TEST_SUITE_SUMMARY.md  __init__.py  conftest.py  pytest.ini  test_01_ingestion.py  test_02_ai_modules.py  test_03_database.py  test_04_api_endpoints.py  test_05_tone_validation.py  test_06_pipeline_e2e.py  test_07_load_testing.py  test_08_security.py  test_09_documentation.py  test_advanced_features.py  test_skill_coach_integration.py  test_tone_integration.py
(+146 files in other folders)
