[project]
name = "skoda-skill-coach"
version = "1.0.0"
description = "ŠKODA AI Skill Coach - AI-powered skill management and analysis system with TONE format support."
authors = [
    { name = "CzechFabric Team", email = "support@czechfabric.cz" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
keywords = ["skoda", "skill-coach", "tone-format", "ai", "fastapi", "llm", "skill-management", "hr-tech"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # SWX-API Core
    "fastapi[standard]<1.0.0,>=0.114.2",
    "uvicorn[standard]<1.0.0,>=0.23.0",
    "gunicorn<22.0.0,>=20.1.0",
    "sqlalchemy<3.0,>=2.0",
    "sqlmodel<1.0.0,>=0.0.21",
    "alembic<2.0.0,>=1.12.1",
    "asyncpg>=0.29.0",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "aiosqlite>=0.19.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings<3.0.0,>=2.2.1",
    "python-dotenv>=1.0.0",
    "python-multipart<1.0.0,>=0.0.7",
    "typing-extensions>=4.8.0",
    # SKODA Skill Coach Required
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "openai>=1.0.0",
    "aiomysql>=0.2.0",
    "httpx<1.0.0,>=0.25.1",
    "httpx-sse==0.4.1",
"transformers>=4.38.0",
"sentence-transformers>=2.2.0",
"torch==2.9.0+cpu",
    # Local AI Fallback
    "ollama>=0.1.0",
    # Additional Dependencies
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "bcrypt==4.0.1",
    "pyjwt<3.0.0,>=2.8.0",
    "authlib>=1.4.0",
    "itsdangerous>=2.2.0",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "jinja2<4.0.0,>=3.1.4",
    "psutil",
    "tenacity<9.0.0,>=8.2.3",
    "openapi-pydantic==0.5.1",
    "ngrok>=1.4.0",
    "sentry-sdk[fastapi]",
    "async-lru==2.0.5",
    "rapidfuzz==3.13.0",
    "dateparser",
    "redis[async]>=4.5.1",
    "toneformat>=1.0.0",
    # Document processing
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
]

[tool.pip.constraints]
"nvidia-*" = "!=*"
"cudnn*" = "!=*"
"cuda*" = "!=*"
"cublas*" = "!=*"
"cu*" = "!=*"

[project.urls]
Homepage = "https://czechfabric.cz"
Documentation = "https://czechfabric.cz/pages/playground"
Repository = "https://github.com/czechfabric/czechfabric"
"Issue Tracker" = "https://github.com/czechfabric/czechfabric/issues"
"TONE Format" = "https://github.com/czechfabric/tone"
"PyPI - TONE" = "https://pypi.org/project/toneformat/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio==1.0.0",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "black<24.0.0,>=23.12.0",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "migrations", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["migrations", "alembic"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused arguments
]
ignore = [
    "E501", # line length
    "B008", # function calls in argument defaults
    "W191", # tabs
    "B904", # exception chaining
]

[project.scripts]
swx = "src.cli.main:main"
